fix button alignment

--- a/projects/bhaus/src/styles.scss
+++ b/projects/bhaus/src/styles.scss
@@ -113,6 +113,7 @@ li { list-style-type: none; }
       display: flex;
       flex-direction: column;
       align-items: center;
+      width: 8vw;
 
       &:not(:first-of-type) {
         margin-left: 10%;
